# tui-rs

./: Cargo.toml  README.md
examples/: inline.rs  zui_demo.rs
src/: buffer.rs  layout.rs  lib.rs  style.rs  terminal.rs  text.rs
src/backend/: mod.rs  termion.rs  test.rs  zui.rs
src/widgets/: barchart.rs  block.rs  chart.rs  clear.rs  gauge.rs  list.rs  mod.rs  paragraph.rs  sparkline.rs  table.rs  tabs.rs
src/widgets/canvas/: mod.rs
tests/: backend_termion.rs
