[package]
name = "zui-widgets"
version = "0.0.1"
authors = ["Abhinav Chavali <abhinavchavali12@gmail.com>", "Florian Dehau <work@fdehau.com>"]
description = """
    An addition to `zui` to add widgets to your UI
"""
documentation = "https://docs.rs/tui/0.16.0/tui/"
keywords = ["tui", "zui", "widgets"]
repository = "https://github.com/dumrich/zui-widgets"
readme = "README.md"
license = "MIT"
exclude = ["assets/*", ".github", "Makefile.toml", "CONTRIBUTING.md", "*.log", "tags"]
autoexamples = true
edition = "2018"

[dependencies]
bitflags = "1.3"
cassowary = "0.3"
unicode-segmentation = "1.2"
unicode-width = "0.1"
libzui = { version="0.0.3", git = "https://github.com/dumrich/zui" }
serde = { version = "1", "optional" = true, features = ["derive"]}

[dev-dependencies]
rand = "0.8"
argh = "0.1"

